--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,24 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+@import './utils/vars';
+@import './utils/placeholders';
+@import './utils/visually-hidden';
 
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './base/common';
+@import './base/container';
+
+@import './components/logo';
+@import './components/button';
+@import './components/mobile-menu';
+@import './components/title';
+
+@import './layout/header';
+@import './layout/hero';
+@import './layout/advantages';
+@import './layout/problems';
+@import './layout/how-we-do';
+@import './layout/program';
+@import './layout/benefits';
+@import './layout/about';
+@import './layout/guarantee';
+@import './layout/reviews';
+@import './layout/contacts';
+@import './layout/footer';
