--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,13 +1,39 @@
 .button {
     display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
     border: none;
     width: 260px;
     height: 48px;
     text-align: center;
     white-space: nowrap;
-    color: $accent-color;
+
+    font-family: Montserrat;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1.2;
+
+    background-color: $accent-color;
+    text-transform: uppercase;
+    color: white;
+    cursor: pointer;
+
+    @media screen and (min-width: 1366px) {
+        width: 354px;
+        height: 70px;
+        font-size: 14px;
+    }
 }
 
+.botton-heder-desk {
+    border: 2px;
+    border-color: $accent-color;
+    background-color: $primary-white-color;
+    color: $accent-color;
+    @media screen and (min-width: 1366px) {
+        width: 336px;
+    }
+}
 // .button {
 //     display: inline-block;
 //     border: none;
