--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -47,8 +47,8 @@ ol {
 }
 
 .container {
-  padding-left: 26px;
-  padding-right: 26px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 0 auto;
 }
 
@@ -61,16 +61,75 @@ ol {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
 
 @media screen and (min-width: 1366px) {
   .container {
     width: 1366px;
+    padding-left: 26px;
+    padding-right: 26px;
   }
 }
 
-.header {
-  color: red;
+.title {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+}
+
+.black-title {
+  color: #111518;
+}
+
+.white-title {
+  color: #ffffff;
+}
+
+.title-accent-word {
+  color: #ff6b09;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 26px;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .title {
+    font-size: 46px;
+  }
+}
+
+.problems {
+  background-color: #111518;
+}
+
+.problems-container {
+  position: relative;
+  padding-top: 27px;
+  min-height: 545px;
+}
+
+.problems-title {
+  margin-bottom: 25px;
+}
+
+.list-block {
+  position: absolute;
+  padding-top: 20px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  width: 100%;
+  background-color: #ffffff;
+}
+
+.problems-list {
+  list-style: decimal-leading-zero;
 }
 /*# sourceMappingURL=main.css.map */
