--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -70,7 +70,121 @@ ol {
   }
 }
 
-.header {
-  color: red;
+.title {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+}
+
+.black-title {
+  color: #111518;
+}
+
+.white-title {
+  color: #ffffff;
+}
+
+.title-accent-word {
+  color: #ff6b09;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 26px;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .title {
+    font-size: 46px;
+  }
+}
+
+.Program {
+  background-color: #111518;
+  padding-top: 50px;
+  padding-bottom: 437px;
+  letter-spacing: 0.03em;
+}
+
+.Program__title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  text-align: center;
+  color: #ffffff;
+  margin-bottom: 43px;
+}
+
+.Program__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 62px;
+  /*   &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 1282px;
+    border-left: 1px solid $primary-white-color;
+    transform: translate(-50%);
+    //  left: -20px;
+  } */
+}
+
+.Program__item:not(:first-child) {
+  padding-top: 40px;
+}
+
+.Program__h3 {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 2;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: #ffffff;
+  position: relative;
+}
+
+.Program__h3::before {
+  content: '';
+  display: block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #ff6b09;
+  position: absolute;
+  bottom: 50%;
+  -webkit-transform: translate(-50%, 50%);
+          transform: translate(-50%, 50%);
+  left: -20px;
+}
+
+.Program__item {
+  width: 176px;
+  position: relative;
+}
+
+.Program__key-points {
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 1.649;
+  letter-spacing: 0.08em;
+  color: #ff6b09;
+}
+
+.Program__points-description {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.66;
+  letter-spacing: 0.08em;
+  color: #b9b9b9;
+  opacity: 0.5;
 }
 /*# sourceMappingURL=main.css.map */
