--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   margin-left: 62px;
-  /*   &::before {
+  &::before {
     content: '';
     display: block;
     position: absolute;
@@ -25,7 +25,7 @@
     border-left: 1px solid $primary-white-color;
     transform: translate(-50%);
     //  left: -20px;
-  } */
+  }
 }
 .Program__item {
   &:not(:first-child) {
