--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -2,6 +2,7 @@
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
+    padding: 15px 10px;
     border: none;
     width: 260px;
     height: 48px;
@@ -9,6 +10,7 @@
     white-space: nowrap;
 
     font-family: Montserrat;
+    font-style: bold;
     font-weight: 700;
     font-size: 12px;
     line-height: 1.2;
@@ -26,40 +28,11 @@
 }
 
 .botton-heder-desk {
-    border: 2px;
-    border-color: $accent-color;
-    background-color: $primary-white-color;
+    border: 2px solid $accent-color;
+    background-color: transparent;
     color: $accent-color;
+
     @media screen and (min-width: 1366px) {
         width: 336px;
     }
 }
-// .button {
-//     display: inline-block;
-//     border: none;
-//     width: 200px;
-//     height: 50px;
-//     text-align: center;
-//     white-space: nowrap;
-//     padding: 10px 32px;
-//     margin-left: auto;
-//     margin-right: auto;
-
-//     font-family: Roboto;
-//     font-weight: 700;
-//     font-size: 16px;
-//     line-height: 1.8;
-
-//     letter-spacing: 0.06em;
-
-//     color: var(--background-color);
-//     background: var(--second-color-link);
-//     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
-//     border-radius: 4px;
-//     cursor: pointer;
-//     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-//     &:hover {
-//         background: var(--btn-hover);
-//     }
-// }
