--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -47,8 +47,8 @@ ol {
 }
 
 .container {
-  padding-left: 26px;
-  padding-right: 26px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin: 0 auto;
 }
 
@@ -61,12 +61,16 @@ ol {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
 
 @media screen and (min-width: 1366px) {
   .container {
     width: 1366px;
+    padding-left: 26px;
+    padding-right: 26px;
   }
 }
 
@@ -97,21 +101,40 @@ ol {
   }
 }
 
-.botton-heder-desk {
-  border: 2px;
-  border-color: #ff6b09;
-  background-color: #ffffff;
+.title {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+}
+
+.black-title {
+  color: #111518;
+}
+
+.white-title {
+  color: #ffffff;
+}
+
+.title-accent-word {
   color: #ff6b09;
 }
 
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 26px;
+  }
+}
+
 @media screen and (min-width: 1366px) {
-  .botton-heder-desk {
-    width: 336px;
+  .title {
+    font-size: 46px;
   }
 }
 
 .contacts-section {
-  background-color: grey;
+  background-image: url("../images/content/mobile/contacts-mob.png");
 }
 
 .contacts-title {
