--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -7,14 +7,14 @@
           <h3 class="Program__h3">1 semester</h3>
           <ul class="list">
             <li class="Program__key-points">
-              — Grammar
+              <h4>— Grammar</h4>
               <ul class="list">
                 <li class="Program__points-description">Nouns & Articles</li>
                 <li class="Program__points-description">Adjectives & Adverb</li>
               </ul>
             </li>
             <li class="Program__key-points">
-              — Vocabulary
+              <h4>— Vocabulary</h4>
               <ul class="list">
                 <li class="Program__points-description">Family & Relations</li>
                 <li class="Program__points-description">People & Society</li>
@@ -27,7 +27,7 @@
         <h3 class="Program__h3">2 semester</h3>
         <ul class="list">
           <li class="Program__key-points">
-            — Grammar
+            <h4>— Grammar</h4>
             <ul class="list">
               <li class="Program__points-description">Pronouns</li>
               <li class="Program__points-description">Active Voice</li>
@@ -35,7 +35,7 @@
             </ul>
           </li>
           <li class="Program__key-points">
-            — Vocabulary
+            <h4>— Vocabulary</h4>
             <ul class="list">
               <li class="Program__points-description">Home</li>
               <li class="Program__points-description">School</li>
@@ -48,7 +48,7 @@
         <h3 class="Program__h3">3 semester</h3>
         <ul class="list">
           <li class="Program__key-points">
-            — Grammar
+            <h4>— Grammar</h4>
             <ul class="list">
               <li class="Program__points-description">Modal verbs</li>
               <li class="Program__points-description">Infinitive Gerund</li>
@@ -56,7 +56,7 @@
             </ul>
           </li>
           <li class="Program__key-points">
-            — Vocabulary
+            <h4>— Vocabulary</h4>
             <ul class="list">
               <li class="Program__points-description">Travel & Tourism</li>
               <li class="Program__points-description">Culture & Free Time</li>
@@ -64,7 +64,7 @@
             </ul>
           </li>
           <li class="Program__key-points">
-            — Vocabulary
+            <h4>— Vocabulary</h4>
             <ul class="list">
               <li class="Program__points-description">Informal Letter</li>
             </ul>
@@ -75,7 +75,7 @@
         <h3 class="Program__h3">4 semester</h3>
         <ul class="list">
           <li class="Program__key-points">
-            — Grammar
+            <h4>— Grammar</h4>
             <ul class="list">
               <li class="Program__points-description">Clauses: Conditional and Wishes</li>
               <li class="Program__points-description">Direct / Reported speech</li>
@@ -85,7 +85,7 @@
             </ul>
           </li>
           <li class="Program__key-points">
-            — Vocabulary
+            <h4>— Vocabulary</h4>
             <ul class="list">
               <li class="Program__points-description">Healthy Living</li>
               <li class="Program__points-description">Nature & Environment</li>
@@ -93,7 +93,7 @@
             </ul>
           </li>
           <li class="Program__key-points">
-            — Vocabulary
+            <h4>— Vocabulary</h4>
             <ul class="list">
               <li class="Program__points-description">Formal Letter</li>
             </ul>
@@ -103,7 +103,7 @@
       <li class="Program__item">
         <h3 class="Program__h3">5 semester</h3>
         <ul class="list">
-          <li class="Program__key-points">—</li>
+          <li class="Program__key-points"><h4>—</h4></li>
           <li>
             <ul class="list">
               <li class="Program__points-description">Revision</li>
