--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,12 +1,12 @@
-// body {
-//   background-color: ;
-//   color: ;
-//   font-family: ;
-//   font-weight: ;
-//   font-size: ;
-//   line-height: ;
-//   letter-spacing: ;
-// }
+body {
+  //   background-color: ;
+  //   color: ;
+  font-family: 'Montserrat', sans-serif;
+  //   font-weight: ;
+  //   font-size: ;
+  //   line-height: ;
+  //   letter-spacing: ;
+}
 
 img {
   display: block;
