--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,11 +1,11 @@
 body {
-  //   background-color: ;
-  //   color: ;
+  background-color: #ffffff;
+  color: #111518;
   font-family: 'Montserrat', sans-serif;
-  //   font-weight: ;
-  //   font-size: ;
-  //   line-height: ;
-  //   letter-spacing: ;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.56;
+  letter-spacing: 0.08em;
 }
 
 img {
