--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -3,24 +3,24 @@
         <h2 class="problems-title title white-title">The main problems of students<br>in English UPE, which<br> we <span
                 class="title-accent-word">help</span> to solve</h2>
         <div class="list-block">
-            <ol class="problems-list">
+            <ol class="problems-list list">
                 <li class="problems-item">
-
+                    <br>Grammar
                 </li>
                 <li class="problems-item">
-
+                    <br>Inability to understand spoken English
                 </li>
                 <li class="problems-item">
-
+                    <br>Stingy vocabulary for writing an essay
                 </li>
                 <li class="problems-item">
-
+                    <br>Preparing alone
                 </li>
                 <li class="problems-item">
-
+                    <br>Lack of a single knowledge resource
                 </li>
                 <li class="problems-item">
-
+                    <br>Lack of self-organization and laziness
                 </li>
             </ol>
         </div>
