--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -3,6 +3,8 @@
   padding-right: 20px;
   margin: 0 auto;
 
+  outline: 2px solid red;
+
   @media screen and (min-width: 480px) {
     width: 480px;
   }
