button-and-contact
chek-point
plus images

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,9 +1,8 @@
 <article class="contacts-section">
   <h2 class="contacts-title">Registration for a <span class="contacts-title--color-word">free</span> phone <span
       class="contacts-title--color-word">consultation</span> on the nuances of English UPE</h2>
-  <p class="contacts-text">Leave a request for participation in a <br><span class="contacts-title--color-word">free
-      lesson</span>.<br>
-    A consultant will contact you and answer your questions</p>
+  <p class="contacts-text">Leave a request for participation in a <span class="contacts-title--color-word">free
+      lesson</span>.<br> A consultant will contact you and answer your questions</p>
 
   <form class="contacts-form">
     <label class="contacts-form__legend" for="username">
