--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -2,7 +2,7 @@
     <div class="problems-container container">
         <h2 class="problems-title title white-title">The main problems of students<br>in English UPE, which<br> we <span
                 class="title-accent-word">help</span> to solve</h2>
-        <div class="list-block">
+        <div class="problems-list-block">
             <ol class="problems-list list">
                 <li class="problems-item">
                     <br>Grammar
