button-and-contacts
button - done
style for button and top-button -done
section contacts:
- html
-scss
-media rules for imagins

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,15 +1,15 @@
 <article class="contacts-section">
-  <h2 class="contacts-title">Registration for a <span class="contacts-title--color-word">free</span> phone <span
+  <h2 class="contacts-title list">Registration for a <span class="contacts-title--color-word">free</span> phone <span
       class="contacts-title--color-word">consultation</span> on the nuances of English UPE</h2>
-  <p class="contacts-text">Leave a request for participation in a <span class="contacts-title--color-word">free
+  <p class="contacts-text list">Leave a request for participation in a <span class="contacts-title--color-word">free
       lesson</span>.<br> A consultant will contact you and answer your questions</p>
 
   <form class="contacts-form">
     <label class="contacts-form__legend" for="username">
-      <input class="contacts-form__name--input" type="text" name="user-name" id="username" placeholder="Name" required
-        autocomplete="off" /></label>
+      <input class="contacts-form__name--input list" type="text" name="user-name" id="username" placeholder="Name"
+        required autocomplete="off" /></label>
     <label class="contacts-form__legend" for="phone">
-      <input class="contacts-form__phone--input" type="tel" name="user-tel" id="phone" placeholder="Phone"
+      <input class="contacts-form__phone--input list" type="tel" name="user-tel" id="phone" placeholder="Phone"
         autocomplete="off" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="096-111-11-11" /></label>
 
     <button type="submit" class="button">i want a free lesson</button>
