--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -44,9 +44,9 @@
 }
 
 /* 2x и 1200+ */
-@media (min-device-pixel-ratio: 2) and (min-width: 768px),
-    (min-resolution: 192dpi) and (min-width: 768px),
-    (min-resolution: 2dppx) and (min-width: 768px) {
+@media (min-device-pixel-ratio: 2) and (min-width: 769px),
+    (min-resolution: 192dpi) and (min-width: 769px),
+    (min-resolution: 2dppx) and (min-width: 769px) {
     .contacts-section {
         background-image: url("../images/content/desktop/contacts-desk@2x.webp");
     }
@@ -59,6 +59,8 @@
 }
 @media screen and (min-width: 1366px) {
     .contacts-section {
+        padding-top: 136px;
+        padding-bottom: 20px;
         max-width: 1679px;
         height: 810px;
     }
@@ -66,10 +68,11 @@
 .contacts-title {
     display: inline-block;
     width: 280px;
+    height: 73px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 30px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 20px;
+    // padding-bottom: 20px;
     font-weight: 800;
     font-style: normal;
     font-size: 14px;
@@ -77,10 +80,12 @@
     color: $primary-white-color;
     @media screen and (min-width: 768px) {
         width: 688px;
+        height: 100px;
         font-size: 26px;
     }
     @media screen and (min-width: 1366px) {
         width: 1090px;
+        height: 170px;
         font-size: 46px;
     }
 }
@@ -89,20 +94,26 @@
     display: inline-block;
     width: 280px;
     margin-bottom: 30px;
-    padding-left: 30px;
-    padding-right: 30px;
+    margin-left: auto;
+    margin-right: auto;
 
     font-weight: 600;
     font-style: normal;
     font-size: 12px;
-    line-height: 1.2;
+    line-height: 1.22;
     color: $primary-white-color;
     @media screen and (min-width: 768px) {
+        margin-bottom: 23px;
+
         width: 452px;
+        height: 51px;
         font-size: 14px;
     }
     @media screen and (min-width: 1366px) {
+        margin-bottom: 54px;
+
         width: 1090px;
+        height: 71px;
         font-size: 30px;
     }
 }
@@ -130,6 +141,12 @@
     @media screen and (min-width: 768px) {
         width: 390px;
     }
+    @media screen and (min-width: 1366px) {
+        margin-bottom: 29px;
+        width: 478px;
+        height: 67px;
+        font-size: 20px;
+    }
 }
 
 .contacts-form__phone--input {
@@ -147,5 +164,11 @@
     color: $primary-white-color;
     @media screen and (min-width: 768px) {
         width: 390px;
+    }
+    @media screen and (min-width: 1366px) {
+        margin-bottom: 77px;
+        width: 478px;
+        height: 67px;
+        font-size: 20px;
     }
 }
