--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,118 +1,118 @@
 <section class="Program">
-  <div class="Program__container container">
-    <h2 class="Program__title">Our program</h2>
-    <ul class="Program__list list">
-      <li class="Program__item">
-        <div class="Program__item-container">
-          <h3 class="Program__h3">1 semester</h3>
+  <div class="Program-container container">
+    <h2 class="Program-title">Our program</h2>
+    <ul class="Program-list list">
+      <li class="Program-item">
+        <div class="Program-item-container">
+          <h3 class="Program-h3">1 semester</h3>
           <ul class="list">
-            <li class="Program__key-points">
-              <h4>— Grammar</h4>
+            <li class="Program-key-points">
+              <h4 class="Program-h4">— Grammar</h4>
               <ul class="list">
-                <li class="Program__points-description">Nouns & Articles</li>
-                <li class="Program__points-description">Adjectives & Adverb</li>
+                <li class="Program-points-description">Nouns & Articles</li>
+                <li class="Program-points-description">Adjectives & Adverb</li>
               </ul>
             </li>
-            <li class="Program__key-points">
-              <h4>— Vocabulary</h4>
+            <li class="Program-key-points">
+              <h4 class="Program-h4">— Vocabulary</h4>
               <ul class="list">
-                <li class="Program__points-description">Family & Relations</li>
-                <li class="Program__points-description">People & Society</li>
+                <li class="Program-points-description">Family & Relations</li>
+                <li class="Program-points-description">People & Society</li>
               </ul>
             </li>
           </ul>
         </div>
       </li>
-      <li class="Program__item">
-        <h3 class="Program__h3">2 semester</h3>
+      <li class="Program-item">
+        <h3 class="Program-h3">2 semester</h3>
         <ul class="list">
-          <li class="Program__key-points">
-            <h4>— Grammar</h4>
+          <li class="Program-key-points">
+            <h4 class="Program-h4">— Grammar</h4>
             <ul class="list">
-              <li class="Program__points-description">Pronouns</li>
-              <li class="Program__points-description">Active Voice</li>
-              <li class="Program__points-description">Passive Voice</li>
+              <li class="Program-points-description">Pronouns</li>
+              <li class="Program-points-description">Active Voice</li>
+              <li class="Program-points-description">Passive Voice</li>
             </ul>
           </li>
-          <li class="Program__key-points">
-            <h4>— Vocabulary</h4>
+          <li class="Program-key-points">
+            <h4 class="Program-h4">— Vocabulary</h4>
             <ul class="list">
-              <li class="Program__points-description">Home</li>
-              <li class="Program__points-description">School</li>
-              <li class="Program__points-description">Work</li>
+              <li class="Program-points-description">Home</li>
+              <li class="Program-points-description">School</li>
+              <li class="Program-points-description">Work</li>
             </ul>
           </li>
         </ul>
       </li>
-      <li class="Program__item">
-        <h3 class="Program__h3">3 semester</h3>
+      <li class="Program-item">
+        <h3 class="Program-h3">3 semester</h3>
         <ul class="list">
-          <li class="Program__key-points">
-            <h4>— Grammar</h4>
+          <li class="Program-key-points">
+            <h4 class="Program-h4">— Grammar</h4>
             <ul class="list">
-              <li class="Program__points-description">Modal verbs</li>
-              <li class="Program__points-description">Infinitive Gerund</li>
-              <li class="Program__points-description">Participle: 1, 2</li>
+              <li class="Program-points-description">Modal verbs</li>
+              <li class="Program-points-description">Infinitive Gerund</li>
+              <li class="Program-points-description">Participle: 1, 2</li>
             </ul>
           </li>
-          <li class="Program__key-points">
-            <h4>— Vocabulary</h4>
+          <li class="Program-key-points">
+            <h4 class="Program-h4">— Vocabulary</h4>
             <ul class="list">
-              <li class="Program__points-description">Travel & Tourism</li>
-              <li class="Program__points-description">Culture & Free Time</li>
-              <li class="Program__points-description">Sport</li>
+              <li class="Program-points-description">Travel & Tourism</li>
+              <li class="Program-points-description">Culture & Free Time</li>
+              <li class="Program-points-description">Sport</li>
             </ul>
           </li>
-          <li class="Program__key-points">
-            <h4>— Vocabulary</h4>
+          <li class="Program-key-points">
+            <h4 class="Program-h4">— Vocabulary</h4>
             <ul class="list">
-              <li class="Program__points-description">Informal Letter</li>
+              <li class="Program-points-description">Informal Letter</li>
             </ul>
           </li>
         </ul>
       </li>
-      <li class="Program__item">
-        <h3 class="Program__h3">4 semester</h3>
+      <li class="Program-item">
+        <h3 class="Program-h3">4 semester</h3>
         <ul class="list">
-          <li class="Program__key-points">
-            <h4>— Grammar</h4>
+          <li class="Program-key-points">
+            <h4 class="Program-h4">— Grammar</h4>
             <ul class="list">
-              <li class="Program__points-description">Clauses: Conditional and Wishes</li>
-              <li class="Program__points-description">Direct / Reported speech</li>
-              <li class="Program__points-description">Preposition</li>
-              <li class="Program__points-description">Conjunction</li>
-              <li class="Program__points-description">Numeral</li>
+              <li class="Program-points-description">Clauses: Conditional and Wishes</li>
+              <li class="Program-points-description">Direct / Reported speech</li>
+              <li class="Program-points-description">Preposition</li>
+              <li class="Program-points-description">Conjunction</li>
+              <li class="Program-points-description">Numeral</li>
             </ul>
           </li>
-          <li class="Program__key-points">
-            <h4>— Vocabulary</h4>
+          <li class="Program-key-points">
+            <h4 class="Program-h4">— Vocabulary</h4>
             <ul class="list">
-              <li class="Program__points-description">Healthy Living</li>
-              <li class="Program__points-description">Nature & Environment</li>
-              <li class="Program__points-description">Money</li>
+              <li class="Program-points-description">Healthy Living</li>
+              <li class="Program-points-description">Nature & Environment</li>
+              <li class="Program-points-description">Money</li>
             </ul>
           </li>
-          <li class="Program__key-points">
-            <h4>— Vocabulary</h4>
+          <li class="Program-key-points">
+            <h4 class="Program-h4">— Vocabulary</h4>
             <ul class="list">
-              <li class="Program__points-description">Formal Letter</li>
+              <li class="Program-points-description">Formal Letter</li>
             </ul>
           </li>
         </ul>
       </li>
-      <li class="Program__item">
-        <h3 class="Program__h3">5 semester</h3>
+      <li class="Program-item">
+        <h3 class="Program-h3">5 semester</h3>
         <ul class="list">
-          <li class="Program__key-points"><h4>—</h4></li>
+          <li class="Program-key-points"><h4 class="Program-h4">—</h4></li>
           <li>
-            <ul class="list">
-              <li class="Program__points-description">Revision</li>
-              <li class="Program__points-description">Tests</li>
+            <ul class="list Program-photo">
+              <li class="Program-points-description">Revision</li>
+              <li class="Program-points-description">Tests</li>
             </ul>
           </li>
         </ul>
       </li>
     </ul>
-    <h2 class="Program__title">Why do people choose us</h2>
+    <h2 class="Program-title sub-title">Why do people choose us</h2>
   </div>
 </section>
