--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -3,9 +3,8 @@
   background-color: $primary-black-color;
   padding-top: 50px;
   padding-bottom: 437px;
-  letter-spacing: 0.08em;
 }
-.Program__title {
+.Program-title {
   font-weight: 800;
   font-size: 20px;
   line-height: 1.3;
@@ -14,18 +13,33 @@
   color: $primary-white-color;
   margin-bottom: 43px;
 }
-.Program__list {
+.Program-list {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-left: 62px;
   position: relative;
   align-self: center;
+  &::after {
+    content: '';
+    display: block;
+
+    position: absolute;
+    background: url('../images/content/mobile/program-mob@2x.png');
+    background-size: contain;
+    opacity: 0.5;
+    height: 137px;
+    width: 120px;
+    bottom: -97px;
+    right: -20px;
+    // transform: translate(-50%, 50%);
+  }
 }
-.Program__item {
+.Program-item {
   position: relative;
   padding-left: 20px;
   width: 176px;
+  box-sizing: content-box;
   &:not(:last-child) {
     padding-bottom: 40px;
   }
@@ -43,13 +57,14 @@
     }
   }
 }
-.Program__h3 {
+.Program-h3 {
   font-weight: bold;
   font-size: 14px;
   line-height: 2;
   text-transform: uppercase;
   color: $primary-white-color;
   position: relative;
+  margin-bottom: 5px;
   &::before {
     content: '';
     display: block;
@@ -64,16 +79,36 @@
     z-index: 2;
   }
 }
-.Program__key-points {
-  font-weight: bold;
+.Program-key-points {
   font-size: 12px;
   line-height: 1.649;
-  color: $accent-color;
+  &:not(:first-child) {
+    margin-top: 8px;
+  }
 }
-.Program__points-description {
+.Program-h4 {
+  font-weight: bold;
+  line-height: 1.649;
+  color: $accent-color;
+  margin-bottom: 5px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  letter-spacing: inherit;
+}
+.Program-points-description {
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.66;
+  line-height: 1.67;
   color: $primary-text-color;
   opacity: 0.5;
+  letter-spacing: 0.08em;
+}
+.sub-title {
+  line-height: 1.36;
+  text-align: left;
+  width: 180px;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  display: inline-block;
 }
